Fix li > ul spacing

--- a/assets/stylesheets/site.scss
+++ b/assets/stylesheets/site.scss
@@ -220,7 +220,7 @@ sup {
     }
 
     li > ul {
-      margin-bottom: 1.25rem;
+      margin-bottom: 0.5rem;
     }
 
     p {
@@ -285,7 +285,7 @@ sup {
     }
 
     li > ul {
-      margin-bottom: 1.25rem;
+      margin-bottom: 0.5rem;
     }
 
     p {
